--- a/crates/ruff_linter/resources/test/project/pyproject.toml
+++ b/crates/ruff_linter/resources/test/project/pyproject.toml
@@ -2,6 +2,6 @@
 src = [".", "python_modules/*"]
 exclude = ["examples/excluded"]
 
-[tool.ruff.lint]
+[tool.scruff.lint]
 extend-select = ["I001"]
 extend-ignore = ["F841"]
