--- a/crates/ruff_linter/resources/test/fixtures/isort/pyproject.toml
+++ b/crates/ruff_linter/resources/test/fixtures/isort/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.scruff]
 line-length = 88
 
-[tool.ruff.lint.isort]
+[tool.scruff.lint.isort]
 lines-after-imports = 3
 lines-between-types = 2
 known-local-folder = ["ruff"]
