--- a/python/ruff-ecosystem/pyproject.toml
+++ b/python/ruff-ecosystem/pyproject.toml
@@ -11,6 +11,6 @@ dependencies = ["unidiff==0.7.5", "tomli_w==1.2.0", "tomli==2.3.0"]
 [project.scripts]
 ruff-ecosystem = "ruff_ecosystem.cli:entrypoint"
 
-[tool.ruff.lint]
+[tool.scruff.lint]
 extend-select = ["I"]
 preview = true
