--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -244,7 +244,7 @@ jobs:
 
   cargo-test-linux:
     name: "cargo test (linux)"
-    runs-on: ${{ github.repository == 'Demonstrandum/scruff && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'Demonstrandum/scruff' && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
     needs: determine_changes
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-test') && (needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main') }}
     timeout-minutes: 20
@@ -303,7 +303,7 @@ jobs:
     runs-on: depot-ubuntu-22.04-16
     needs: determine_changes
     if: |
-      github.repository == 'Demonstrandum/scruff &&
+      github.repository == 'Demonstrandum/scruff' &&
       !contains(github.event.pull_request.labels.*.name, 'no-test') &&
       (needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main')
     timeout-minutes: 20
@@ -335,7 +335,7 @@ jobs:
     strategy:
       matrix:
         platform:
-          - ${{ github.repository == 'Demonstrandum/scruff && 'depot-windows-2022-16' || 'windows-latest' }}
+          - ${{ github.repository == 'Demonstrandum/scruff' && 'depot-windows-2022-16' || 'windows-latest' }}
           - macos-latest
     name: "cargo test (${{ matrix.platform }})"
     runs-on: ${{ matrix.platform }}
@@ -398,7 +398,7 @@ jobs:
 
   cargo-build-msrv:
     name: "cargo build (msrv)"
-    runs-on: ${{ github.repository == 'Demonstrandum/scruff && 'depot-ubuntu-latest-8' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'Demonstrandum/scruff' && 'depot-ubuntu-latest-8' || 'ubuntu-latest' }}
     needs: determine_changes
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-test') && (needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main') }}
     timeout-minutes: 20
@@ -520,7 +520,7 @@ jobs:
 
   ecosystem:
     name: "ecosystem"
-    runs-on: ${{ github.repository == 'Demonstrandum/scruff && 'depot-ubuntu-latest-8' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'Demonstrandum/scruff' && 'depot-ubuntu-latest-8' || 'ubuntu-latest' }}
     needs: determine_changes
     # Only runs on pull requests, since that is the only we way we can find the base version for comparison.
     # Ecosystem check needs linter and/or formatter changes.
@@ -627,12 +627,12 @@ jobs:
 
   fuzz-ty:
     name: "Fuzz for new ty panics"
-    runs-on: ${{ github.repository == 'Demonstrandum/scruff && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'Demonstrandum/scruff' && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
     needs:
       - determine_changes
     # Only runs on pull requests, since that is the only we way we can find the base version for comparison.
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-test') && github.event_name == 'pull_request' && (needs.determine_changes.outputs.ty == 'true' || needs.determine_changes.outputs.py-fuzzer == 'true') }}
-    timeout-minutes: ${{ github.repository == 'Demonstrandum/scruff && 10 || 20 }}
+    timeout-minutes: ${{ github.repository == 'Demonstrandum/scruff' && 10 || 20 }}
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
@@ -690,7 +690,7 @@ jobs:
 
   ty-completion-evaluation:
     name: "ty completion evaluation"
-    runs-on: ${{ github.repository == 'Demonstrandum/scruff && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'Demonstrandum/scruff' && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.ty == 'true' || github.ref == 'refs/heads/main' }}
     steps:
@@ -742,7 +742,7 @@ jobs:
 
   pre-commit:
     name: "pre-commit"
-    runs-on: ${{ github.repository == 'Demonstrandum/scruff && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'Demonstrandum/scruff' && 'depot-ubuntu-22.04-16' || 'ubuntu-latest' }}
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -931,7 +931,7 @@ jobs:
     runs-on: ubuntu-24.04
     needs: determine_changes
     if: |
-      github.repository == 'Demonstrandum/scruff &&
+      github.repository == 'Demonstrandum/scruff' &&
       (
         github.ref == 'refs/heads/main' ||
         needs.determine_changes.outputs.formatter == 'true' ||
@@ -972,7 +972,7 @@ jobs:
     runs-on: ubuntu-24.04
     needs: determine_changes
     if: |
-      github.repository == 'Demonstrandum/scruff &&
+      github.repository == 'Demonstrandum/scruff' &&
       (
         github.ref == 'refs/heads/main' ||
         needs.determine_changes.outputs.ty == 'true'
@@ -1011,7 +1011,7 @@ jobs:
     name: "benchmarks walltime (${{ matrix.benchmarks }})"
     runs-on: codspeed-macro
     needs: determine_changes
-    if: ${{ github.repository == 'Demonstrandum/scruff && !contains(github.event.pull_request.labels.*.name, 'no-test') && (needs.determine_changes.outputs.ty == 'true' || github.ref == 'refs/heads/main') }}
+    if: ${{ github.repository == 'Demonstrandum/scruff' && !contains(github.event.pull_request.labels.*.name, 'no-test') && (needs.determine_changes.outputs.ty == 'true' || github.ref == 'refs/heads/main') }}
     timeout-minutes: 20
     strategy:
       matrix:
