--- a/.github/workflows/daily_fuzz.yaml
+++ b/.github/workflows/daily_fuzz.yaml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     # Don't run the cron job on forks:
-    if: ${{ github.repository == 'Demonstrandum/scruff || github.event_name != 'schedule' }}
+    if: ${{ github.repository == 'Demonstrandum/scruff' || github.event_name != 'schedule' }}
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
@@ -62,7 +62,7 @@ jobs:
     name: Create an issue if the daily fuzz surfaced any bugs
     runs-on: ubuntu-latest
     needs: fuzz
-    if: ${{ github.repository == 'Demonstrandum/scruff && always() && github.event_name == 'schedule' && needs.fuzz.result == 'failure' }}
+    if: ${{ github.repository == 'Demonstrandum/scruff' && always() && github.event_name == 'schedule' && needs.fuzz.result == 'failure' }}
     permissions:
       issues: write
     steps:
