--- a/crates/scruff/Cargo.toml
+++ b/crates/scruff/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scruff"
-version = "0.14.6"
+version = "0.14.6.post1"
 publish = true
 authors = { workspace = true }
 edition = { workspace = true }
