--- a/python/py-fuzzer/pyproject.toml
+++ b/python/py-fuzzer/pyproject.toml
@@ -19,7 +19,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["mypy", "ruff"]
+dev = ["mypy", "scruff"]
 
 [tool.hatch.build.targets.wheel]
 include = ["fuzz.py"]
